dev/konflux-1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: konflux-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: konflux-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: konflux-app
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: db-credentials
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: db-credentials
        - name: DB_HOST
          value: postgresql
        - name: DB_NAME
          value: sampledb
        - name: PYTHONPATH
          value: /home/appuser/.local/lib/python3.12/site-packages
        - name: RESTART_ID
          value: retry-db-connection-1
        image: image-registry.openshift-image-registry.svc:5000/idankatz-dev/konflux-lab:latest
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
