dev/konflux-1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: konflux-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: konflux-app
  sessionAffinity: None
  type: ClusterIP
