dev/konflux-1/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: konflux-route
spec:
  port:
    targetPort: 5000
  to:
    kind: Service
    name: konflux-service
    weight: 100
  wildcardPolicy: None
